--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">cafe24</string>
+    <!-- <string moduleConfig="true" name="CodePushDeploymentKey">m07aSCc0wXLCNyuLHSzNoflRNdUBYt81x-4e7</string> -->
 </resources>
